--- a/config/languages/Español.txt
+++ b/config/languages/Español.txt
@@ -10,3 +10,10 @@ PROMPT_GAME_NAME=Elige el nombre de la partida
 FILE_EXISTS=Ya existe una partida con ese nombre
 SAVED_GAMES_LIST=Partidas guardadas
 NO_SAVED_GAMES=No hay ninguna partida guardada, creando una nueva...
+PROMPT_NUM_PLAYERS=Introduzca en número de jugadores
+PROMPT_PLAYER_NAME=Introduzca el nombre del jugador (%d)
+NAME_ALREADY_TAKEN=El nombre escogido ya pertenece a un jugador
+OPERATIONS_MENU=Menu de opciones
+OPERATIONS_MENU_OPTION_COD_OP=Introducir código de operación
+OPERATIONS_MENU_OPTION_GAME_STATUS=Ver estado del juego
+OPERATIONS_MENU_OPTION_SAVE_GAME=Guardar partida
