--- a/config/languages/English.txt
+++ b/config/languages/English.txt
@@ -6,7 +6,14 @@ EXIT=Exit
 PROMPT_OPTION=Select an option
 GOODBYE=Goodbye...
 MAIN_MENU=Main menu
-PROMPT_GAME_NAME=Choose the name of the game
+PROMPT_GAME_NAME=Choose a name for the game
 FILE_EXISTS=The is already a saved game with this name
 SAVED_GAMES_LIST=Saved games
 NO_SAVED_GAMES=No saved games, creating a new one...
+PROMPT_NUM_PLAYERS=Enter de number of players
+PROMPT_PLAYER_NAME=Enter the name of the player (%d)
+NAME_ALREADY_TAKEN=The name chosen is already in use by another player
+OPERATIONS_MENU=Options menu
+OPERATIONS_MENU_OPTION_COD_OP=Enter the operation code
+OPERATIONS_MENU_OPTION_GAME_STATUS=Check the game status
+OPERATIONS_MENU_OPTION_SAVE_GAME=Save game
