Menu with exit option

--- a/config/languages/English.txt
+++ b/config/languages/English.txt
@@ -17,3 +17,4 @@ OPERATIONS_MENU=Options menu
 OPERATIONS_MENU_OPTION_COD_OP=Enter the operation code
 OPERATIONS_MENU_OPTION_GAME_STATUS=Check the game status
 OPERATIONS_MENU_OPTION_SAVE_GAME=Save game
+OPERATIONS_MENU_OPTION_SAVE_EXIT=Exit to main menu
