Change lang option

--- a/config/languages/English.txt
+++ b/config/languages/English.txt
@@ -2,6 +2,7 @@ WELCOME=WELCOME TO THE MONOPOLY GAME (Digital Bank Edition)
 INVALID_OPTION=Invalid option!, Please choose an option within the interval
 NEW_GAME=New game
 LOAD_GAME=Load game
+CHANGE_LANGUAGE=Language
 EXIT=Exit
 PROMPT_OPTION=Select an option
 GOODBYE=Goodbye...
