Do operation unchecked

--- a/config/languages/English.txt
+++ b/config/languages/English.txt
@@ -26,3 +26,21 @@ GAME_STATUS_PLAYERS=Players summary
 INVALID_CODE=This code entered doesn't exist
 PLAYER_TURN=Who is playing this turn?
 PROMPT_PLAYER_LIST=Enter the number of the player
+PROMPT_ROLL_THE_DICE=Roll the dice and enter the number shown on the dice
+PROPERTY_IS_MORTGAGED=The property is mortgaged, the players doesn't have to pay anything
+PLAYER_LIQUIDATE_ASSETS=The player needs to liquidate his assets to complete the operation
+LIQUIDATE_MENU=Liquidation menu
+PLAYER_PROPERTIES_LIST=Player's properties list
+YES=Yes
+NO=No
+PLAYER_DONT_BUY_PROPERTY=The player haven't bought the property
+ASK_MANAGE_PROPERTY=Do you want to enter the property management menu
+PROPERTY_MANAGEMENT_MENU=Property management menu
+PLAYER_CANT_AFFORD=The player cant afford the payment
+PROPERTY_CANT_SELL_HOUSES=The property don't have enough houses to sell
+PROPERTY_ALREADY_HAS_HOTEL=The property already has a hotel
+PROPERTY_CANT_SELL_HOTEL=The property don't have a hotel to sell
+PROPERTY_ALREADY_MORTGAGED=The property is already mortgaged
+PROPERTY_CANT_MORTGAGE=The property can't be mortgaged, make sure to sell all the houses and hotels before mortgaging it
+PROPERTY_NOT_MORTGAGED=The property is not mortgaged
+PROPERTY_CANT_SELL_MORTGAGED=THe property can't be sold because it is mortgaged
