--- a/config/languages/Español.txt
+++ b/config/languages/Español.txt
@@ -26,3 +26,21 @@ GAME_STATUS_PLAYERS=Resumen de los jugadores
 INVALID_CODE=El código introducido no existe
 PLAYER_TURN=Quien esta jugando el turno actual?
 PROMPT_PLAYER_LIST=Introduzca el numero del jugador
+PROMPT_ROLL_THE_DICE=Tira el dado e introduce el numero que ha salido
+PROPERTY_IS_MORTGAGED=La propiedad esta hipotecada, el jugado no tiene que pagar nada
+PLAYER_LIQUIDATE_ASSETS=El jugador debe liquidar sus activos para completar la operacion
+LIQUIDATE_MENU=Menu de liquidacion
+PLAYER_PROPERTIES_LIST=Lista de propiedades del jugador
+YES=Si
+NO=No
+PLAYER_DONT_BUY_PROPERTY=El jugador no ha comprado la propiedad
+ASK_MANAGE_PROPERTY=Quieres entrar al menu de gestion de la propiedad
+PROPERTY_MANAGEMENT_MENU=Menu de gestion de la propiedad
+PLAYER_CANT_AFFORD=El jugador no se puede permitir el pago
+PROPERTY_CANT_SELL_HOUSES=La propiedad no tiene tantas casas para vender
+PROPERTY_ALREADY_HAS_HOTEL=La propiedad ya tiene un hotel
+PROPERTY_CANT_SELL_HOTEL=La propiedad no tiene un hotel para vender
+PROPERTY_ALREADY_MORTGAGED=La propiedad ya esta hipotecada
+PROPERTY_CANT_MORTGAGE=La propiedad no se puede hipotecar, asegurate de que no tiene casas ni hoteles antes de deshipotecarla
+PROPERTY_NOT_MORTGAGED=La propiedad no esta hipotecada
+PROPERTY_CANT_SELL_MORTGAGED=La propiedad no se puede vender porque esta hipotecada
