--- a/config/languages/English.txt
+++ b/config/languages/English.txt
@@ -46,3 +46,4 @@ PROPERTY_NOT_MORTGAGED=The property is not mortgaged
 PROPERTY_CANT_SELL_MORTGAGED=The property can't be sold because it is mortgaged
 PAYMENT_CARD=The player has drawn the card
 PLAYER_LOSER=The player [%s] has lost the game
+PROPERTY_ASK_BUY=Do you want to buy the property [%s] for %d?
