--- a/config/languages/English.txt
+++ b/config/languages/English.txt
@@ -35,7 +35,7 @@ YES=Yes
 NO=No
 PLAYER_DONT_BUY_PROPERTY=The player haven't bought the property
 ASK_MANAGE_PROPERTY=Do you want to enter the property management menu
-PROPERTY_MANAGEMENT_MENU=Property management menu
+PROPERTY_MANAGEMENT_MENU=Property management menu of [%s]
 PLAYER_CANT_AFFORD=The player cant afford the payment
 PROPERTY_CANT_SELL_HOUSES=The property don't have enough houses to sell
 PROPERTY_ALREADY_HAS_HOTEL=The property already has a hotel
@@ -47,3 +47,5 @@ PROPERTY_CANT_SELL_MORTGAGED=The property can't be sold because it is mortgaged
 PAYMENT_CARD=The player has drawn the card
 PLAYER_LOSER=The player [%s] has lost the game
 PROPERTY_ASK_BUY=Do you want to buy the property [%s] for %d?
+PROMPT_AMOUNT=Enter the amount
+PROPERTY_SUMMARY=Houses=%d ~ Hotel=%s ~ Mortgaged=%s ~ Income=%d
