Menu selection lib

--- a/config/languages/English.txt
+++ b/config/languages/English.txt
@@ -4,7 +4,7 @@ NEW_GAME=New game
 LOAD_GAME=Load game
 CHANGE_LANGUAGE=Language
 EXIT=Exit
-PROMPT_OPTION=Select an option
+PROMPT_OPTION=Choose an option
 GOODBYE=Goodbye...
 MAIN_MENU=Main menu
 PROMPT_GAME_NAME=Choose a name for the game
@@ -53,3 +53,6 @@ PROPERTY_CANT_BUY_HOTEL=The property must have 4 houses before buying a hotel
 SUMMARY_PLAYER_PAY_RENT=The player [%s] will pay (%d) to the player [%s] for using the property [%s]
 PROMPT_OP_CODE =Enter the operation code
 PLAYER_WINNER=The player [%s] has won the game
+PRESS_ENTER=Press enter to continue...
+SELECT_OPTION=Select an option (use the arrows to move and enter to select)
+MENU_HINT=Type a number from the list below and press <ENTER>
