--- a/config/languages/Español.txt
+++ b/config/languages/Español.txt
@@ -4,7 +4,7 @@ NEW_GAME=Nueva partida
 LOAD_GAME=Cargar partida
 CHANGE_LANGUAGE=Idioma
 EXIT=Salir
-PROMPT_OPTION=Seleccione una opción
+PROMPT_OPTION=Seleccione una opcion
 GOODBYE=Hasta luego...
 MAIN_MENU=Menu principal
 PROMPT_GAME_NAME=Elige el nombre de la partida
@@ -53,3 +53,5 @@ PROPERTY_CANT_BUY_HOTEL=La propiedad no se puede comprar un hotel, asegurate de 
 SUMMARY_PLAYER_PAY_RENT=El jugador [%s] paga (%d) de alquiler al jugador [%s] por usar la propiedad [%s]
 PROMPT_OP_CODE=Introduzca el codigo de operacion
 PLAYER_WINNER=El jugador [%s] ha ganado
+PRESS_ENTER=Presione ENTER para continuar...
+MENU_HINT=Escribe un numero de la lista y presiona <ENTER>
