--- a/config/languages/English.txt
+++ b/config/languages/English.txt
@@ -1,4 +1,6 @@
 WELCOME=WELCOME TO THE MONOPOLY GAME (Digital Bank Edition)
+LANGUAGE_SELECTION_TITLE=Language selection
+MAIN_MENU_TITLE=Main menu
 INVALID_OPTION=Invalid option!
 NEW_GAME=New game
 LOAD_GAME=Load game
@@ -12,7 +14,7 @@ FILE_EXISTS=The is already a saved game with this name
 SAVED_GAMES_LIST=Saved games
 NO_SAVED_GAMES=No saved games, creating a new one...
 PROMPT_NUM_PLAYERS=Enter de number of players
-PROMPT_PLAYER_NAME=Enter the name of the player (%d)
+PROMPT_PLAYER_NAME=Player %d
 NAME_ALREADY_TAKEN=The name chosen is already in use by another player
 OPERATIONS_MENU=Options menu
 OPERATIONS_MENU_OPTION_COD_OP=Enter the operation code
@@ -56,3 +58,6 @@ PLAYER_WINNER=The player [%s] has won the game
 PRESS_ENTER=Press enter to continue...
 SELECT_OPTION=Select an option (use the arrows to move and enter to select)
 MENU_HINT=Type a number from the list below and press <ENTER>
+WARN=Warning
+MUST_BE_POSITIVE=The entered value must be positive
+MUST_BE_NUMBER=The entered value must be a number
