--- a/config/languages/Español.txt
+++ b/config/languages/Español.txt
@@ -1,4 +1,6 @@
 WELCOME=BIENVENIDO AL MONOPOLY (Edición Banco Digital)
+LANGUAGE_SELECTION_TITLE=Seleccion de idioma
+MAIN_MENU_TITLE=Menu principal
 INVALID_OPTION=¡Opción no válida!
 NEW_GAME=Nueva partida
 LOAD_GAME=Cargar partida
@@ -12,7 +14,7 @@ FILE_EXISTS=Ya existe una partida con ese nombre
 SAVED_GAMES_LIST=Partidas guardadas
 NO_SAVED_GAMES=No hay ninguna partida guardada, creando una nueva...
 PROMPT_NUM_PLAYERS=Introduzca en número de jugadores
-PROMPT_PLAYER_NAME=Introduzca el nombre del jugador (%d)
+PROMPT_PLAYER_NAME=Jugador %d
 NAME_ALREADY_TAKEN=El nombre escogido ya pertenece a un jugador
 OPERATIONS_MENU=Menu de opciones
 OPERATIONS_MENU_OPTION_COD_OP=Introducir código de operación
@@ -55,3 +57,6 @@ PROMPT_OP_CODE=Introduzca el codigo de operacion
 PLAYER_WINNER=El jugador [%s] ha ganado
 PRESS_ENTER=Presione ENTER para continuar...
 MENU_HINT=Escribe un numero de la lista y presiona <ENTER>
+WARN=Advertencia
+MUST_BE_POSITIVE=El valor introducido debe ser positivo
+MUST_BE_NUMBER=El valor introducido debe ser un numero
