--- a/config/languages/English.txt
+++ b/config/languages/English.txt
@@ -56,7 +56,6 @@ SUMMARY_PLAYER_PAY_RENT=The player [%s] will pay (%d) to the player [%s] for usi
 PROMPT_OP_CODE =Enter the operation code
 PLAYER_WINNER=The player [%s] has won the game
 PRESS_ENTER=Press enter to continue...
-SELECT_OPTION=Select an option (use the arrows to move and enter to select)
 MENU_HINT=Type a number from the list below and press <ENTER>
 WARN=Warning
 MUST_BE_POSITIVE=The entered value must be positive
@@ -66,3 +65,11 @@ TRANSACTION_TITLE=Transaction
 INFO=Information
 ASK_YES_NO=Si=[1] / No=[0]
 MUST_BE_YES_NO=The entered value must be 1 (Yes) or 0 (No)
+PROPERTY_SUMMARY_TITLE=Property summary
+PROPERTY_MANAGEMENT_BUY_HOUSES=Buy houses
+PROPERTY_MANAGEMENT_SELL_HOUSES=Sell houses
+PROPERTY_MANAGEMENT_BUY_HOTEL=Buy hotel
+PROPERTY_MANAGEMENT_SELL_HOTEL=Sell hotel
+PROPERTY_MANAGEMENT_MORTGAGE=Mortgage property
+PROPERTY_MANAGEMENT_PAY_OFF_MORTGAGE=Pay off mortgage
+PROPERTY_MANAGEMENT_SELL=Sell property
