--- a/config/languages/Español.txt
+++ b/config/languages/Español.txt
@@ -56,7 +56,7 @@ SUMMARY_PLAYER_PAY_RENT=El jugador [%s] paga (%d) de alquiler al jugador [%s] po
 PROMPT_OP_CODE=Introduzca el codigo de operacion
 PLAYER_WINNER=El jugador [%s] ha ganado
 PRESS_ENTER=Presione ENTER para continuar...
-MENU_HINT=Escribe un numero de la lista y presiona <ENTER>
+MENU_HINT=Introduce un numero de la lista y presiona <ENTER>
 WARN=Advertencia
 MUST_BE_POSITIVE=El valor introducido debe ser positivo
 MUST_BE_NUMBER=El valor introducido debe ser un numero
@@ -65,3 +65,11 @@ TRANSACTION_TITLE=Transaccion
 INFO=Informacion
 ASK_YES_NO=YES=[0] / NO=[1]
 MUST_BE_YES_NO=El valor introducido debe ser 1 (Si) o 0 (No)
+PROPERTY_SUMMARY_TITLE=Resumen de la propiedad
+PROPERTY_MANAGEMENT_BUY_HOUSES=Comprar casas
+PROPERTY_MANAGEMENT_SELL_HOUSES=Vender casas
+PROPERTY_MANAGEMENT_BUY_HOTEL=Comprar hotel
+PROPERTY_MANAGEMENT_SELL_HOTEL=Vender hotel
+PROPERTY_MANAGEMENT_MORTGAGE=Hipotecar propiedad
+PROPERTY_MANAGEMENT_PAY_OFF_MORTGAGE=Deshipotecar propiedad
+PROPERTY_MANAGEMENT_SELL=Vender propiedad
