Fixed form, reset settings

--- a/config/languages/Español.txt
+++ b/config/languages/Español.txt
@@ -73,3 +73,4 @@ PROPERTY_MANAGEMENT_SELL_HOTEL=Vender hotel
 PROPERTY_MANAGEMENT_MORTGAGE=Hipotecar propiedad
 PROPERTY_MANAGEMENT_PAY_OFF_MORTGAGE=Deshipotecar propiedad
 PROPERTY_MANAGEMENT_SELL=Vender propiedad
+PROMPT_PLAYERS_NAMES_TITLE=Nombres de los jugadores
