--- a/config/languages/English.txt
+++ b/config/languages/English.txt
@@ -73,3 +73,4 @@ PROPERTY_MANAGEMENT_SELL_HOTEL=Sell hotel
 PROPERTY_MANAGEMENT_MORTGAGE=Mortgage property
 PROPERTY_MANAGEMENT_PAY_OFF_MORTGAGE=Pay off mortgage
 PROPERTY_MANAGEMENT_SELL=Sell property
+PROMPT_PLAYERS_NAMES_TITLE=Players names
