--- a/config/languages/English.txt
+++ b/config/languages/English.txt
@@ -25,6 +25,7 @@ GAME_SAVED=The game has been saved successfully
 GAME_STATUS=Current game status
 GAME_STATUS_FILENAME=Game name
 GAME_STATUS_PLAYERS=Players summary
+GAME_STATUS_PLAYER=Player %s summary
 INVALID_CODE=This code entered doesn't exist
 PLAYER_TURN=Who is playing this turn?
 PROMPT_PLAYER_LIST=Enter the number of the player
@@ -74,3 +75,5 @@ PROPERTY_MANAGEMENT_MORTGAGE=Mortgage property
 PROPERTY_MANAGEMENT_PAY_OFF_MORTGAGE=Pay off mortgage
 PROPERTY_MANAGEMENT_SELL=Sell property
 PROMPT_PLAYERS_NAMES_TITLE=Players names
+INCOME=Income
+MORTGAGED=Mortgaged
