--- a/config/languages/Español.txt
+++ b/config/languages/Español.txt
@@ -25,6 +25,7 @@ GAME_SAVED=La partida ha sido guardada correctamente
 GAME_STATUS=Estado actual de la partida
 GAME_STATUS_FILENAME=Nombre de la partida
 GAME_STATUS_PLAYERS=Resumen de los jugadores
+GAME_STATUS_PLAYER=Resumen del Jugador %s
 INVALID_CODE=El código introducido no existe
 PLAYER_TURN=Quien esta jugando el turno actual?
 PROMPT_PLAYER_LIST=Introduzca el numero del jugador
@@ -74,3 +75,6 @@ PROPERTY_MANAGEMENT_MORTGAGE=Hipotecar propiedad
 PROPERTY_MANAGEMENT_PAY_OFF_MORTGAGE=Deshipotecar propiedad
 PROPERTY_MANAGEMENT_SELL=Vender propiedad
 PROMPT_PLAYERS_NAMES_TITLE=Nombres de los jugadores
+NAME=Nombre
+INCOME=Ingresos
+MORTGAGED=Hipotecada
