--- a/config/languages/Español.txt
+++ b/config/languages/Español.txt
@@ -53,7 +53,7 @@ PROPERTY_ASK_BUY=¿Quieres comprar la propiedad [%s] por %d?
 PROMPT_AMOUNT=Introduzca la cantidad
 PROPERTY_SUMMARY=Casas=%d ~ Hotel=%s ~ Hipotecada=%s ~ Ingresos=%d
 PROPERTY_CANT_BUY_HOTEL=La propiedad no se puede comprar un hotel, asegurate de que tiene 4 casas antes de comprar un hotel
-SUMMARY_PLAYER_PAY_RENT=El jugador [%s] paga (%d) de alquiler al jugador [%s] por usar la propiedad [%s]
+SUMMARY_PLAYER_PAY_RENT=%s paga (%d) de alquiler a %s por caer en %s
 PROMPT_OP_CODE=Introduzca el codigo de operacion
 PLAYER_WINNER=El jugador [%s] ha ganado
 PRESS_ENTER=Presione ENTER para continuar...
@@ -62,9 +62,9 @@ WARN=Advertencia
 MUST_BE_POSITIVE=El valor introducido debe ser positivo
 MUST_BE_NUMBER=El valor introducido debe ser un numero
 MUST_NOT_BE_EMPTY=El valor introducido no puede estar vacio
-TRANSACTION_TITLE=Transaccion
+TRANSACTION=Transaccion
 INFO=Informacion
-ASK_YES_NO=YES=[0] / NO=[1]
+ASK_YES_NO=Si=[1] / No=[0]
 MUST_BE_YES_NO=El valor introducido debe ser 1 (Si) o 0 (No)
 PROPERTY_SUMMARY_TITLE=Resumen de la propiedad
 PROPERTY_MANAGEMENT_BUY_HOUSES=Comprar casas
@@ -74,7 +74,11 @@ PROPERTY_MANAGEMENT_SELL_HOTEL=Vender hotel
 PROPERTY_MANAGEMENT_MORTGAGE=Hipotecar propiedad
 PROPERTY_MANAGEMENT_PAY_OFF_MORTGAGE=Deshipotecar propiedad
 PROPERTY_MANAGEMENT_SELL=Vender propiedad
+PROPERTY_MANAGEMENT_IS_MORTGAGED=No puede acceder a esta opcion porque la propiedad esta hipotecada
 PROMPT_PLAYERS_NAMES_TITLE=Nombres de los jugadores
 NAME=Nombre
 INCOME=Ingresos
 MORTGAGED=Hipotecada
+HOUSES=Casas
+HOTEL=Hotel
+DICE=Dado
