liquidation menu un tested

--- a/config/languages/English.txt
+++ b/config/languages/English.txt
@@ -32,6 +32,7 @@ PROMPT_PLAYER_LIST=Enter the number of the player
 PROMPT_ROLL_THE_DICE=Roll the dice and enter the number shown on the dice
 PROPERTY_IS_MORTGAGED=The property is mortgaged, the players doesn't have to pay anything
 PLAYER_LIQUIDATE_ASSETS=The player needs to liquidate his assets to complete the operation
+ASK_LIQUIDATE_ASSETS=You can't afford the payment, do you want to liquidate your assets?
 LIQUIDATE_MENU=Liquidation menu
 PLAYER_PROPERTIES_LIST=Player's properties list
 YES=Yes
@@ -81,3 +82,4 @@ MORTGAGED=Mortgaged
 HOUSES=Houses
 HOTEL=Hotel
 DICE=Dice
+NO_PROPERTIES_TO_LIQUIDATE=The player don't have any properties to liquidate
