--- a/config/languages/Español.txt
+++ b/config/languages/Español.txt
@@ -32,10 +32,12 @@ PROMPT_PLAYER_LIST=Introduzca el numero del jugador
 PROMPT_ROLL_THE_DICE=Tira el dado e introduce el numero que ha salido
 PROPERTY_IS_MORTGAGED=La propiedad esta hipotecada, el jugado no tiene que pagar nada
 PLAYER_LIQUIDATE_ASSETS=El jugador debe liquidar sus activos para completar la operacion
+ASK_LIQUIDATE_ASSETS=No tiene suficiente dinero, quieres liquidar tus activos?
 LIQUIDATE_MENU=Menu de liquidacion
 PLAYER_PROPERTIES_LIST=Lista de propiedades del jugador
 YES=Si
 NO=No
+PLAYER_BUY_PROPERTY=El jugador [%s]  ha comprado la propiedad [%s]
 PLAYER_DONT_BUY_PROPERTY=El jugador no ha comprado la propiedad
 ASK_MANAGE_PROPERTY=Quieres entrar al menu de gestion de la propiedad
 PROPERTY_MANAGEMENT_MENU=Menu de gestion de la propiedad [%s]
@@ -82,3 +84,4 @@ MORTGAGED=Hipotecada
 HOUSES=Casas
 HOTEL=Hotel
 DICE=Dado
+NO_PROPERTIES_TO_LIQUIDATE=El jugador no tiene propiedades que liquidar
