--- a/config/languages/Español.txt
+++ b/config/languages/Español.txt
@@ -85,3 +85,5 @@ HOUSES=Casas
 HOTEL=Hotel
 DICE=Dado
 NO_PROPERTIES_TO_LIQUIDATE=El jugador no tiene propiedades que liquidar
+PAYMENT_CARD_TITLE=Tarjetas de pago
+REPAIRS_CARD_TITLE=Tarjetas de reparaciones
