--- a/config/languages/English.txt
+++ b/config/languages/English.txt
@@ -37,6 +37,7 @@ LIQUIDATE_MENU=Liquidation menu
 PLAYER_PROPERTIES_LIST=Player's properties list
 YES=Yes
 NO=No
+PLAYER_BUY_PROPERTY=The player [%s] has bought the property [%s]
 PLAYER_DONT_BUY_PROPERTY=The player have not bought the property
 ASK_MANAGE_PROPERTY=Do you want to enter the property management menu
 PROPERTY_MANAGEMENT_MENU=Property management menu of [%s]
@@ -77,6 +78,7 @@ PROPERTY_MANAGEMENT_PAY_OFF_MORTGAGE=Pay off mortgage
 PROPERTY_MANAGEMENT_SELL=Sell property
 PROPERTY_MANAGEMENT_IS_MORTGAGED=You can't access this option because the property is mortgaged
 PROMPT_PLAYERS_NAMES_TITLE=Players names
+NAME=Name
 INCOME=Income
 MORTGAGED=Mortgaged
 HOUSES=Houses
@@ -85,3 +87,4 @@ DICE=Dice
 NO_PROPERTIES_TO_LIQUIDATE=The player don't have any properties to liquidate
 PAYMENT_CARD_TITLE=Payment card
 REPAIRS_CARD_TITLE=Repairs card
+PLAYER_INFO_TITLE=Player info
