--- a/config/languages/English.txt
+++ b/config/languages/English.txt
@@ -88,3 +88,10 @@ NO_PROPERTIES_TO_LIQUIDATE=The player don't have any properties to liquidate
 PAYMENT_CARD_TITLE=Payment card
 REPAIRS_CARD_TITLE=Repairs card
 PLAYER_INFO_TITLE=Player info
+REPAIRS_BILL=Repairs bill
+REPAIRS_BILL_HEAD=SUBJECT                                                        UNITS       PRICE
+REPAIRS_HOUSES   =Houses reparations ............................................... %d ..... $%d
+REPAIRS_HOTELS   =Hotels reparations ............................................... %d ..... $%d
+REPAIRS_BRIBE    =Meal with the mayor ...................................................... $%d
+REPAIRS_TAX      =VAT ............................................................ 21%% ..... $%.2f
+REPAIRS_TOTAL    =TOTAL .................................................................... $%.2f
