--- a/config/languages/Español.txt
+++ b/config/languages/Español.txt
@@ -88,3 +88,10 @@ NO_PROPERTIES_TO_LIQUIDATE=El jugador no tiene propiedades que liquidar
 PAYMENT_CARD_TITLE=Tarjetas de pago
 REPAIRS_CARD_TITLE=Tarjetas de reparaciones
 PLAYER_INFO_TITLE=Informacion del jugador
+REPAIRS_BILL=Factura por reparaciones
+REPAIRS_BILL_HEAD=CONCEPTO                                                        UNIDADES       IMPORTE
+REPAIRS_HOUSES   =Reparaciones en casas ................................................ %d ..... $%d
+REPAIRS_HOTELS   =Reparaciones en hoteles .............................................. %d ..... $%d
+REPAIRS_BRIBE    =Agilizar tramites con el ayuntamiento ........................................ $%d
+REPAIRS_TAX      =IVA ................................................................ 21%% .... $%.2f
+REPAIRS_TOTAL    =Total ........................................................................ $%.2f
