Fix house buy max

--- a/config/languages/English.txt
+++ b/config/languages/English.txt
@@ -96,3 +96,4 @@ REPAIRS_BRIBE    =Meal with the mayor ..........................................
 REPAIRS_TAX      =VAT ............................................................ 21%% ..... $%.2f
 REPAIRS_TOTAL    =TOTAL .................................................................... $%.2f
 PLAY_AGAIN=The game has ended, do you want to play again?
+PROPERTY_CANT_BUY_HOUSES=The property can't build more houses
