--- a/config/languages/English.txt
+++ b/config/languages/English.txt
@@ -46,7 +46,7 @@ PROPERTY_CANT_SELL_HOUSES=The property don't have enough houses to sell
 PROPERTY_ALREADY_HAS_HOTEL=The property already has a hotel
 PROPERTY_CANT_SELL_HOTEL=The property don't have a hotel to sell
 PROPERTY_ALREADY_MORTGAGED=The property is already mortgaged
-PROPERTY_CANT_MORTGAGE=The property can't be mortgaged, make sure to sell all the houses and hotels before mortgaging it
+PROPERTY_CANT_MORTGAGE=The property can't be mortgaged if there are houses or hotels built
 PROPERTY_NOT_MORTGAGED=The property is not mortgaged
 PROPERTY_CANT_SELL_MORTGAGED=The property can't be sold because it is mortgaged
 PAYMENT_CARD=The player has drawn the card
